--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Portifólio de Projetos</strong> de Ciência de Dados</a>
 									<ul class="icons">
-										<li><a href="https://linkedin.com/in/jocafneto/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://github.com/jocafneto/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://linkedin.com/in/jocafneto/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/jocafneto/" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>										
 									</ul>
 								</header>
@@ -136,7 +136,7 @@
 									<blockquote>Construção de <b>soluções</b> para os <b>problemas de negócio</b>, próximo dos <b>desafios reais</b> de uma <b>empresa</b>, utilizando <b>dados públicos</b> de competições de <b>ciência de dados</b>, onde é abordado desde a <b>questão de negócio</b> da empresa até a <b>publicação do modelo</b>, devidamente treinado, <b>em produção</b>, utilizando ferramentas de <b>cloud computing</b>.</blockquote>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/jocafneto/Insiders-Clustering" class="image"><img src="images/7.jpg" alt="" /></a>
+											<a href="https://github.com/jocafneto/Insiders-Clustering" target="_blank" rel="noopener noreferrer" class="image"><img src="images/7.jpg" alt="" /></a>
 											<h3>Insiders Clustering</h3>
 											<p>Um projeto, <b>em desenvolvimento</b>, de <b>clusterização</b>, onde o <b>problema de negócio</b> da empressa de <b>E-commerce</b> envolve em <b>criar</b> um <b>programa de fidelidade</b> para os seus <b>clientes valiosos</b>, portanto esse projeto tem o objetivo de <b>identificar</b> quem são os <b>clientes elegíveis</b> para esse <b>programa</b>.</p>
 											<p>O resultado dessa <b>solução</b>, em <b>detalhes</b>, você pode conferir no <b>Github</b>.</p>
@@ -150,11 +150,11 @@
 												<li>Metabase Vizualization</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jocafneto/Insiders-Clustering" class="button">Visualize on Github</a></li>
+												<li><a href="https://github.com/jocafneto/Insiders-Clustering" target="_blank" rel="noopener noreferrer" class="button">Visualize on Github</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/jocafneto/Insurance-All-Cross-Sell" class="image"><img src="images/2.jpg" alt="" /></a>
+											<a href="https://github.com/jocafneto/Insurance-All-Cross-Sell" target="_blank" rel="noopener noreferrer" class="image"><img src="images/2.jpg" alt="" /></a>
 											<h3>Health Insurance Cross Sell</h3>
 											<p>Um projeto de <b>classificação</b> do tipo <b>“learning to rank”</b>, onde o <b>problema de negócio</b> da empresa de <b>seguro de carro</b> envolve em descobrir quais são os <b>clientes</b> que tem <b>maior propensão</b> de <b>adquirir</b> um segundo produto que está sendo ofertado pela empresa, o de <b>seguro de vida</b>.</p>
 											<p>O resultado dessa <b>solução</b>, em <b>detalhes</b> de <b>retornos financeiros</b>, você pode conferir no <b>Github</b>.</p>
@@ -166,11 +166,11 @@
 												<li>Random Forest, Decision Tree, XGboost, KNN, GaussianNB</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jocafneto/Insurance-All-Cross-Sell" class="button">Visualize on Github</a></li>
+												<li><a href="https://github.com/jocafneto/Insurance-All-Cross-Sell" target="_blank" rel="noopener noreferrer" class="button">Visualize on Github</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/jocafneto/Rossmann-Sales-Prediction" class="image"><img src="images/6.jpg" alt="" /></a>
+											<a href="https://github.com/jocafneto/Rossmann-Sales-Prediction" target="_blank" rel="noopener noreferrer" class="image"><img src="images/6.jpg" alt="" /></a>
 											<h3>Rossmann Sales Prediction</h3>
 											<p>Um projeto de <b>regressão</b>, onde o <b>problema de negócio</b> da empressa de <b>rede de farmácia</b> envolve em saber qual será o <b>retorno financeiro</b> nas <b>próximas seis semanas</b> de cada loja da empresa, afim de ter uma dimensão de qual será o <b>limite de orçamento</b> para uma <b>futura reforma</b> de cada loja.</p>
 											<p>O resultado dessa <b>solução</b>, em <b>detalhes</b> de <b>retornos financeiros</b>, você pode conferir no <b>Github</b>.</p>
@@ -182,11 +182,11 @@
 												<li>Random Forest, XGBoost</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jocafneto/Rossmann-Sales-Prediction" class="button">Visualize on Github</a></li>
+												<li><a href="https://github.com/jocafneto/Rossmann-Sales-Prediction" target="_blank" rel="noopener noreferrer" class="button">Visualize on Github</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/jocafneto/PCR-Covid-Test-NIR" class="image"><img src="images/5.jpg" alt="" /></a>
+											<a href="https://github.com/jocafneto/PCR-Covid-Test-NIR" target="_blank" rel="noopener noreferrer" class="image"><img src="images/5.jpg" alt="" /></a>
 											<h3>PCR Covid Test - NIR</h3>
 											<p>Um projeto de <b>classificação</b>, onde o <b>problema de negócio</b> da empressa de <b>rede de farmácia</b> envolve em <b>classificar</b> os testes <b>positivos</b> e <b>negativos</b> para a <b>Covid</b> de cada <b>amostra</b> utilizando um método chamado <b>Espectroscopia do Infravermelho Próximo (NIR)</b>.</p>
 											<p>O resultado dessa <b>solução</b>, em <b>detalhes</b>, você pode conferir no <b>Github</b>.</p>
@@ -198,7 +198,7 @@
 												<li>XGBoost, LGBM, Decision Tree, GaussianNB, KNN</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/jocafneto/PCR-Covid-Test-NIR" class="button">Visualize on Github</a></li>
+												<li><a href="https://github.com/jocafneto/PCR-Covid-Test-NIR" target="_blank" rel="noopener noreferrer" class="button">Visualize on Github</a></li>
 											</ul>
 										</article>
 										
@@ -255,8 +255,8 @@
 									</header>
 									<p>Sinta-se a vontade para entrar em contato.</p>
 									<ul class="contact">
-										<li class="icon brands fa-linkedin"><b>LinkedIn</b>: <a href="https://linkedin.com/in/jocafneto/">@jocafneto</a></li>
-										<li class="icon brands fa-github"><b>Github</b>: <a href="https://github.com/jocafneto/">@jocafneto</a></li>
+										<li class="icon brands fa-linkedin"><b>LinkedIn</b>: <a href="https://linkedin.com/in/jocafneto/" target="_blank" rel="noopener noreferrer">@jocafneto</a></li>
+										<li class="icon brands fa-github"><b>Github</b>: <a href="https://github.com/jocafneto/" target="_blank" rel="noopener noreferrer">@jocafneto</a></li>
 										<li class="icon solid fa-envelope"><b>E-mail</b>: jocafneto@gmail.com</li>										
 									</ul>
 								</section>
