--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 												<li>Python, Pandas, Seaborn e Matplotlib</li>
 												<li>Jupyter Notebook, VSCode</li>
 												<li>K-Means, Hierarquical Clustering, DBScan</li>
-												<li>AWS Clound (EC2, S3, Postgre, SQLite)</li>
+												<li>AWS Cloud (EC2, S3, Postgre, SQLite)</li>
 												<li>Metabase Vizualization</li>
 											</ul>
 											<ul class="actions">
