--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									</header>
 									<h2>Meu nome é Joaquim Fortunato</h2>
 									<div class="box">
-										<blockquote>Estou me formando em <b>Física - Bacharel</b>, atualmente faço uma curso em paralelo de <b>Ciência de Dados</b>, ofertado pela maior comunidade de ciência de dados do Brasil, <b>Comunidade Data Science</b>.</blockquote>
+										<blockquote>Formação em <b>Física - Bacharel</b> na UFES, atualmente estudo, em paralelo, <b>Ciência de Dados</b>, pela <b>Comunidade Data Science</b>.</blockquote>
 										<blockquote>Busco um <b>ambiente</b> onde eu possa usar da <b>Ciência de Dados</b> como ferramenta para melhorar as <b>tomada de decisões da empresa</b>, me <b>desenvolver profissionalmente</b> e <b>contribuir</b> com a minha <b>experiência</b> para o <b>crescimento do negócio</b>.</blockquote>
 										<blockquote>Atualmente estou <b>desenvolvendo</b> um <b>projeto de clusterização</b>, disponível no meu <b>Github</b>, de um <b>E-commerce</b> e sua <b>integração</b> em <b>ambiente cloud (Azure e AWS)</b>.</blockquote>
 									</div>
