--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 									</header>
 									<p>Sinta-se a vontade para entrar em contato.</p>
 									<ul class="contact">
+										<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 										<div class="badge-base LI-profile-badge" data-locale="pt_BR" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="jocafneto" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://br.linkedin.com/in/jocafneto?trk=profile-badge">Joaquim Fortunato</a></div>
 										<li class="icon brands fa-linkedin"><b>LinkedIn</b>: <a href="https://linkedin.com/in/jocafneto/" target="_blank" rel="noopener noreferrer">@jocafneto</a></li>
 										<li class="icon brands fa-github"><b>Github</b>: <a href="https://github.com/jocafneto/" target="_blank" rel="noopener noreferrer">@jocafneto</a></li>
